cmake_minimum_required(VERSION 3.21)
project(start C)

set(CMAKE_C_STANDARD 99)

add_executable(chapter3_charint01 chapter3/charint01.c)
add_executable(chapter3_escseq01 chapter3/escseq01.c)
add_executable(chapter3_format01 chapter3/format01.c)
add_executable(chapter3_floatprint chapter3/floatprint.c)
add_executable(chapter3_scanfint01 chapter3/scanfint01.c)
add_executable(chapter3_longlongint chapter3/longlongint.c)
add_executable(chapter3_ex1 chapter3/ex1.c)
add_executable(chapter3_scanferror01 chapter3/scanferror01.c)
add_executable(chapter3_scanfint02 chapter3/scanfint02.c)